RESOLVED FIXED236810
Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
https://bugs.webkit.org/show_bug.cgi?id=236810
Summary Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
Simon Fraser (smfr)
Reported 2022-02-17 16:25:49 PST
Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
Attachments
Patch (5.71 KB, patch)
2022-02-17 16:32 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-02-17 16:32:24 PST
Simon Fraser (smfr)
Comment 2 2022-02-17 16:32:28 PST
EWS
Comment 3 2022-02-17 19:56:42 PST
Committed r290109 (247455@main): <https://commits.webkit.org/247455@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452444 [details].
Note You need to log in before you can comment on or make changes to this bug.