Cherry-pick r290109. rdar://problem/89072235

Crash under ScrollingCoordinatorMac::hasNodeWithAnimatedScrollChanged()
    https://bugs.webkit.org/show_bug.cgi?id=236810
    <rdar://89072235>

    Reviewed by Dean Jackson.

    Crash data suggests that r288933 didn't fix the crash entirely.

    Although the code paths I can find appear to hold the lock, there may be an
    opportunity for m_scrollingCoordinator to get nulled out after we null-check it
    but before the copy for the main thread dispatch.

    So make a RefPtr on the stack, null-check it, and then move it into the callback.

    * page/scrolling/ThreadedScrollingTree.cpp:
    (WebCore::ThreadedScrollingTree::reportSynchronousScrollingReasonsChanged):
    (WebCore::ThreadedScrollingTree::reportExposedUnfilledArea):
    (WebCore::ThreadedScrollingTree::currentSnapPointIndicesDidChange):
    (WebCore::ThreadedScrollingTree::handleWheelEventPhase):
    (WebCore::ThreadedScrollingTree::setActiveScrollSnapIndices):
    (WebCore::ThreadedScrollingTree::hasNodeWithAnimatedScrollChanged):

    Canonical link: https://commits.webkit.org/247455@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290109 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.224@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290698 268f45cc-cd09-0410-ab3c-d52691b4dbfc